@@ -288,6 +288,8 @@ Ext.extend(MODx.grid.Grid,Ext.grid.EditorGridPanel,{
                         c[i].renderer = Ext.util.Format.dateRenderer(c[i].editor.initialConfig.format || 'Y-m-d');
                     } else if (r === 'boolean') {
                         c[i].renderer = this.rendYesNo;
+                    } else if (r === 'password') {
+                        c[i].renderer = this.rendPassword;
                     } else if (r === 'local' && typeof(c[i].renderer) == 'string') {
                         c[i].renderer = eval(c[i].renderer);
                     }
@@ -343,6 +345,14 @@ Ext.extend(MODx.grid.Grid,Ext.grid.EditorGridPanel,{
     
     ,refresh: function() {
         this.getStore().reload();
+    }
+
+    ,rendPassword: function(v,md) {
+        var z = ''
+        for (i=0;i<v.length;i++) {
+            z = z+'*';
+        }
+        return z;
     }
     
     ,rendYesNo: function(v,md) {
